--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,3 +1,30 @@
-<p>Hello</p>
-
-<%= markdown("`hello`") %>
+<section class="dashContent" id="showSnippet">
+    <div class="snippetGrid">
+    <%# IF THE USER IS NOT THE LOGGED IN USER CHECK FOR IF IS_PRIVATE %>
+    <% if logged_in_user.id %>
+        <%if !Snippet.all.map(&:user_id).include?(@logged_in_user.id )%>  <!-- Checks if the Snippet.all includes the current logged_in_user.id-->
+            <%= "This user doesn't have any snippets" %>
+        <% else %>
+            <% Snippet.all.each do |s| %>                               <!-- Displays Snippets from Current User -->
+                <% if s.user_id == logged_in_user.id && s.is_private == false%>
+                    <%= link_to snippet_path(s.id) do %>
+                        <div class='snippetLink'><%= "#{s.title}" %></div>
+                    <% end %>
+                <% end %>
+            <% end %>
+        <% end %>
+    <% elsif logged_in? %>                <!-- Checks if the Current user is equal to the User page id -->
+        <%if !Snippet.all.map(&:user_id).include?(logged_in_user.id)%>  <!-- Checks if the Snippet.all includes the current logged_in_user.id-->
+            <%= "This user doesn't have any snippets" %>
+        <% else %>
+            <% Snippet.all.each do |s| %>                               <!-- Displays Snippets from Current User -->
+                <% if s.user_id == logged_in_user.id %>
+                    <%= link_to snippet_path(s.id) do %>
+                        <div class='snippetLink'><%= "#{s.title}" %></div>
+                    <% end %>
+                <% end %>
+            <% end %>
+        <% end %>
+    <% end %>
+    </div>
+</section>
