--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,22 @@
 <div id="userEditContainer">
-    <section id="userEdit">
-        <h1 class="formHeader">Edit Your Account</h1>
-        <!-- try to center this! also get ur fonts! -->
-        <div id="editFormSize">
-            <%= form_for(@user) do |f| %>
-                <%= f.text_field :name, class: 'edit_lineInput', placeholder: 'Name'%>
-                <%= f.password_field :password, class: 'edit_lineInput', placeholder: 'Password'%>
-                <%= f.submit "Edit", id: 'signUpBtn'%>
-                <%= button_to "Delete Account", @user, method: :delete, class:'btn' %>
-            <% end %>
+  <section id="userEdit">
+    <h1 class="formHeader">Edit Your Account Details</h1>
+    <div id="editFormSize">
+        <%= form_for(@user) do |f| %>
+          <%# how do you disable autofill? %>
+          <%= f.text_field :name, class: 'edit_lineInput', placeholder: 'Enter a new username', autocomplete: 'off'%>
+          <%= f.password_field :password, class: 'edit_lineInput', placeholder: 'Enter a new password'%>
+          <div class="user__editBtnContainer">
+            <%= f.submit "Edit", class:'btn'%>
+            <%= button_to "Delete Account", @user, method: :delete, class:'btn' %>
+          </div>
+        <% end %>
 
-            <% if flash[:errors] %>
-                <% flash[:errors].each do |error| %>
-                    <p style ="color: red"><%= error %></p>
-                <% end %>
-            <% end %>
-        </div>
-    </section>
-    <!-- <section class="codeGraphic"></section> -->
+      <% if flash[:errors] %>
+        <% flash[:errors].each do |error| %>
+          <p style ="color: red"><%= error %></p>
+        <% end %>
+      <% end %>
+    </div>
+  </section>
 </div>
