--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -175,31 +175,30 @@ nav {
 .headerContainer {
   // border: 1px solid red;
   padding: 5px 0;
-  background-color: #ae81ff;
+  background-color: #404040;
   width: 70%;
   margin: 0 auto;
   position: relative;
   top: 50px;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(174,129,255,0.5);
-  -moz-box-shadow: 0px 0px 20px 0px rgba(174,129,255,0.5);
-  box-shadow: 0px 0px 20px 0px rgba(174,129,255,0.5);
+  border-bottom: 5px solid #66d9ef;
 }
 
 .snippetHeader {
   font-family: "Coolvetica Regular";
-  color: #201D20;
+  color: #66d9ef;
   text-transform: uppercase;
 }
 
 // think about a border on the side?
 
 .snippetLink {
-  color: #333;
-  background-color: #f92672;
+  color: #f8f8f2;
+  // background-color: #f92672;
+  background-color: #404040;
+  border-left: 5px solid #f92672;
   font-family: "Coolvetica Regular";
-  font-style: italic;
   height: 5vh;
-  border-radius: 10px;
+  text-transform: uppercase;
   margin: 0 auto 2vh;
   line-height: 5vh;
   width: 90%;
