--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -31,6 +31,8 @@ html {
   font-size: 20px;
   text-transform: uppercase;
   background-color: #66d9ef;
+
+  grid-area: st;
 }
 
 #snippetSubmitBtn:hover {
@@ -219,5 +221,33 @@ pre {
 .private_radio_button input[type="radio"]:active + label {
   border: 2px dashed #444;
   background-color: #fdf;
+}
 
+// Handles Submit and Return organization
+#user_Submittals{
+  display: grid;
+  grid-template-areas: "st rn";
+}
+
+
+
+// Handles Return Button
+#returnBtn {
+  height: 60px;
+  width: 100%;
+  line-height: 60px;
+  color: #201D20;
+  border: 0;
+  margin-top: 0;
+  font-family: "Coolvetica Regular";
+  font-size: 20px;
+  text-transform: uppercase;
+  background-color: #66d9ef;
+  text-align: center;
+
+  grid-area: rn;
+}
+
+#returnBtn:hover {
+  background-color: #a1efe4;
 }
