Users Edit Page Fixed

--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -167,6 +167,10 @@ pre {
   text-align: center;
 }
 
+.snippetEditBtn:hover {
+  background-color: #f7d1a7;
+}
+
 
 // HANDLES SPECIALIZED BUTTONS FOR SNIPPETS
 #private_Radio_Label {
