--- a/app/views/snippets/new.html.erb
+++ b/app/views/snippets/new.html.erb
@@ -41,7 +41,7 @@
           <%= link_to user_path(logged_in_user.id) do %>
             <div id="returnBtn">Return</div>
           <% end %>
-        </div><br><br>
+        </div>
       </div>
     <% end %>
 
@@ -50,5 +50,5 @@
         <p style ="color: red"><%= error %></p>
       <% end %>
     <% end %>
-  </div>
+  </div><br><br><br><br>
 </div>
