--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,23 @@
 <div class="userDashboard">
   <nav>
-    <div class="navLink userLink">
-      <!-- would an image go here? if we implement that? -->
-      <!-- this isn't going to be a button, this'll have an image -->
-      <h2><%= @user.name %></h2>
-    </div>
     <% if logged_in? && logged_in_user.id == @user.id %>
         <%= link_to edit_user_path(@user), method: :get do %>
-          <div class="navLink userEdit">Account Settings</div>
+          <div class="navLink userLink"><h2><%= @user.name %>'s Account Settings</h2> </div>
         <% end %>
+    <% end %>
+
+      <!-- would an image go here? if we implement that? -->
+      <!-- this isn't going to be a button, this'll have an image -->
+      
+    <% if logged_in? && logged_in_user.id == @user.id %>
+       
+          <div class="navLink userEdit"><h2><%= @user.name %>'s Account Settings</h2> </div>
+     
     <% end %>
 
       <% if logged_in? %>
           <%= link_to new_snippet_path do %>
-            <div class="navLink userSnippets">Create a Snippet</div>
+            <div class="navLink userSnippets"><h2>Create a Snippet </h2></div>
           <% end %>
       <% end %>
 
