--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,8 +7,7 @@
           <%= f.text_field :name, class: 'edit_lineInput', placeholder: 'Enter a new username', autocomplete: 'off'%>
           <%= f.password_field :password, class: 'edit_lineInput', placeholder: 'Enter a new password'%>
           <div class="user__editBtnContainer">
-            <%= f.submit "Edit", class:'btn'%>
-            <%= button_to "Delete Account", @user, method: :delete, class:'btn' %>
+            <%= f.submit "Update", class:'btn'%>
           </div>
         <% end %>
 
