--- a/app/views/snippets/edit.html.erb
+++ b/app/views/snippets/edit.html.erb
@@ -1,1 +1,46 @@
-<h1> THIS IS THE EDIT PAGE </h1>
+<div class="snippetContainer">
+  <div class="snippetFormWrapper">
+    <%# do we add a logo here? %>
+    <div class="upper">
+    <%= form_for @snippet do |f| %>
+      <!-- Handles the Title text field -->
+      <%= f.text_field :title, placeholder: 'Title', class:'snippetInput snippetTitle' %>
+      <div class="wpContainer">
+        <!-- do we make these divs with an anchor? or keep them as buttons? -->
+        <!-- will be triggered to toggle the write/preview -->
+        <!-- Shows Write Page -->
+        <div class="wpBtn">Write</div> <%# If the user clicks this button then display the code area ..::PERSIST  %>
+
+        <!-- Shows Rogue Markdown -->
+        <div class="wpBtn">Preview</div> <%# If the user clicks this button then display the preview area ..::PERSIST  %>
+      </div>
+    </div>
+
+      <div class="lower">
+        <!-- Handles Code Text -->
+        <%= f.text_area :code, placeholder: 'Add your notes here', class:'snippetInput snippetTextArea' %>
+
+        <!-- Handles the Set to private functionality -->
+          <div class="private_Radio_Form">
+            <div class="left_button">
+              <%= f.label :is_private, "Private", :value => "true", class:"private_radio_button" %>
+              <%= f.radio_button :is_private, true %>
+            </div>
+            <div class="right_button">
+              <%= f.label :is_private, "Public", :value => "false", class:"private_radio_button" %>
+              <%= f.radio_button :is_private, false, :checked => true %>
+            </div>
+          </div>
+        <div class="user_Submittals">
+          <%= f.submit 'Update', class:'snippetSubmitBtn' %>
+    <% end %>
+    </div>
+  </div>
+
+    <% if flash[:errors] %>
+      <% flash[:errors].each do |error| %>
+        <p style ="color: red"><%= error %></p>
+      <% end %>
+    <% end %>
+  </div>
+</div>
