--- a/app/views/snippets/show.html.erb
+++ b/app/views/snippets/show.html.erb
@@ -8,7 +8,7 @@
     </article>
     <div class="view__snippetBtnContainer">
       <%= link_to user_path(logged_in_user.id) do %>
-        <div id="returnBtn">Return</div>
+        <div class="returnBtn">Return</div>
       <% end %>
       <%= link_to edit_snippet_path(@snippet.id) do %>
         <div class="snippetEditBtn">Edit</div>
