--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,9 @@
       <!-- this isn't going to be a button, this'll have an image -->
       
     <% if logged_in? && logged_in_user.id == @user.id %>
-       
-          <div class="navLink userEdit"><h2><%= @user.name %>'s Account Settings</h2> </div>
-     
+        <%= link_to new_category_path do %>
+          <div class="navLink userEdit"><h2> Create a Category </h2> </div>
+        <% end %>
     <% end %>
 
       <% if logged_in? %>
@@ -35,26 +35,29 @@
       <h1 class="snippetHeader">Categories</h1>
     </div>
     <section class="dashContent" id="showCategory">
-      <div class="categoryGrid">
-        <% if logged_in? && logged_in_user.id == @user.id %>                   <!-- Checks if the Current user is equal to the User page id -->
-            <% if !Category.all.map(&:user_id).include?(logged_in_user.id) %>  <!-- Checks if the Category.all includes the current logged_in_user.id-->
+     <!-- <div class="snippetGridContainer">  CULPRIT 1 --> 
+         <!-- <div class="snippetGridScroll"> CULPRIT 2 -->
+          <% if logged_in? && logged_in_user.id == @user.id %>                   <!-- Checks if the Current user is equal to the User page id -->
+              <% if !Category.all.map(&:user_id).include?(logged_in_user.id) %>  <!-- Checks if the Category.all includes the current logged_in_user.id-->
                 <%= "This User does not have any Categories" %>
-            <% else %>
-                <% Category.all.each do |c| %>                                     <!-- Displays Snippets from Current User Page -->
+              <% else %>
+                  <% Category.all.each do |c| %>                                     <!-- Displays Snippets from Current User Page -->
                     <% if c.user_id == @user.id %>
-                        <%= c.name %>        <br>
-                        <%= c.language %>    <br>
-                        <%= c.description %>
+                      <%= link_to categories_path(c.id) do %>
+                        <!-- <div class='snippetLink'><%= "#{c.name}" %></div> CULPRIT 3 -->
+                      <% end %>
                     <% end %>
-                <% end %>
-            <% end %>
-        <% end %>
-      </div>
+                  <% end %>
+              <% end %>
+          <% end %>
+        <!-- </div> CULPRIT 4 -->
+        
+      <!-- </div> CULPRIT 5 -->
     </section>
 
     <!-- Handle Current User Snippet Display -->
     <div class="headerContainer">
-      <h1 class="snippetHeader">Snippets</h1>
+      <h1 class="snippetHeader"> Snippets </h1>
     </div>
     <section class="dashContent" id="showSnippet">
       <div class="snippetGridContainer">
