reworked the category page

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,31 +1,22 @@
-<div id="snippetContainer">
-  <div id="snippetFormWrapper">
+<div class="catContainer">
+  <div class="catFormWrapper">
     <%# do we add a logo here? %>
-    <div id="upper">
+    <div class="upper">
     <%= form_for @category do |f| %>
-
-      <!-- Handles the Title text field -->
-      <%= f.text_field :name, placeholder: 'Add your Category Name here', class:'snippetInput', id:'snippetTitle' %>
-      <%= f.text_field :language, placeholder: 'Add your Language Type here', class:'snippetInput', id:'snippetTitle' %>
-      <div id="wpContainer">
-        <!-- do we make these divs with an anchor? or keep them as buttons? -->
-        <!-- will be triggered to toggle the write/preview -->        
-        <!-- Shows Write Page -->
-        <div class="wpBtn">Write</div> <%# If the user clicks this button then display the code area ..::PERSIST  %>
-
-        <!-- Shows Rogue Markdown -->
-        <div class="wpBtn">Preview</div> <%# If the user clicks this button then display the preview area ..::PERSIST  %>
+      <%= f.text_field :name, placeholder: 'Category Name', class:'catInput', id:'catName' %>
+      <div class="catWrapper">
+        <%= f.text_field :language, placeholder: 'Language', class:'catInput', id:'catLanguage' %>
       </div>
-    </div> 
-    
-      <div id="lower">
-        <!-- Handles Code Text -->
-        <%= f.text_area :description, placeholder: 'Add a short description of the Category Here', class:'snippetInput', id:'snippetTextArea' %>
+    </div>
 
-        <div id="user_Submittals">
-          <%= f.submit 'Submit', id:'snippetSubmitBtn' %>
+      <div class="lower">
+        <!-- Handles Code Text -->
+        <%= f.text_area :description, placeholder: 'Add a short description of the category here', class:'snippetInput catTextArea' %>
+
+        <div class="cat_Submittals">
+          <%= f.submit 'Submit', class:'catSubmitBtn' %>
           <%= link_to user_path(logged_in_user.id) do %>
-            <div id="returnBtn">Return</div>
+            <div class="catReturnBtn">Return</div>
           <% end %>
         </div>
       </div>
@@ -36,5 +27,5 @@
         <p style ="color: red"><%= error %></p>
       <% end %>
     <% end %>
-  </div><br><br><br><br>
+  </div>
 </div>
