--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
           <%= f.text_field :name, class: 'edit_lineInput', placeholder: 'Enter a new username', autocomplete: 'off'%>
           <%= f.password_field :password, class: 'edit_lineInput', placeholder: 'Enter a new password'%>
           <div class="user__editBtnContainer">
-            <%= f.submit "Update", class:'btn'%>
+            <%= f.submit "Update", class:'btn edit_rd_button'%>
 
         <% end %>
 
