--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -48,6 +48,7 @@ html {
 
 .snippetSubmitBtn:hover {
   background-color: #a1efe4;
+  transition: 0.1s;
 }
 
 .upper {
@@ -180,62 +181,43 @@ pre {
 
 .snippetEditBtn:hover {
   background-color: #f7d1a7;
+  transition: 0.1s;
 }
 
 
 // HANDLES SPECIALIZED BUTTONS FOR SNIPPETS
-.private_Radio_Label {
-  height: 4em;
+.private_Radio_Form{
+  background-color: #fd971f;
+  height: 60px;
   width: 100%;
   color: #201D20;
   font-family: "Coolvetica Regular";
   font-size: 15px;
   text-transform: uppercase;
-  background-color: #fd971f;
   text-align: center;
-  display: inline-block;
+  display: flex;
+  justify-content: space-around;
 }
-.private_Radio_Form{
-  display: grid;
-  grid-template-areas: "l r";
-}
-
-// #private_Radio_Form input[type="radio"]  {
-//   opacity: 0;
-//   position: fixed;
-//   width: 0;
-// }
 
 .private_Radio_Form label {
-  background-color: #f92672;
-  padding: 8px 15px;
-  font-family: sans-serif, Arial;
-  font-size: 10px;
-
+  line-height: 50px;
+  font-size: 20px;
+  margin: 5px 0;
+  font-family: "Coolvetica Regular";
 }
 
-.private_Radio_Form .left_button{
-  background-color: #fd971f;
-  grid-area: l;
+.private_Radio_Form input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
 }
 
-.private_Radio_Form .right_button{
-  background-color: #fd971f;
-  grid-area: r;
-}
-
-.private_Radio_Form label:hover {
-  background-color: #fd5ff0;
-}
-
-.private_radio_button input[type="radio"]:checked + label {
-  background-color:#bfb;
-  border-color: #4c4;
-}
-
-.private_radio_button input[type="radio"]:active + label {
-  border: 2px dashed #444;
-  background-color: #fdf;
+input[type="radio"]:checked + .private_radio_button {
+  font-style: italic;
+  background-color: #333;
+  color: #fd971f;
+  padding: 0 10px;
+  transition: 0.2s;
 }
 
 // Handles Submit and Return organization
@@ -256,10 +238,8 @@ pre {
   text-transform: uppercase;
   background-color: #66d9ef;
   text-align: center;
-
-  grid-area: rn;
 }
 
 .returnBtn:hover {
-  background-color: #a1efe4;
+  transition: 0.1s;
 }
